@@ -11,7 +11,8 @@ V1.7.3
 ! optimized machine indexing (pooplog)
 * sampler doesn't crash when no instrument is specified any more (pooplog)
 * save as - pick an existing song, and it now asks if it is ok to overwrite (pooplog)
-
+* error messages on file read/write problems (pooplog)
+* vsts don't immediately crash psycle when they give an exception on save/load any more (pooplog)
 
 V1.7.1
 ------
